started Star class

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    Controls: <br>
+		    '4' = rotate left <br>
+		    '6' = rotate right <br>
+		    '8' = accelerate <br>
+		    '5' = "hyperspace"
 	    </footer>
 	</body>
 </html>
