changed spaceship shape, star size, controls for hyperspace

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>Header</h1>
+			<h1>Asteroids</h1>
 		</header>
 			<section id="content">
 				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame.pde Floater.pde Spaceship.pde Star.pde">
@@ -16,10 +16,10 @@
 		    </section>
 	    <footer>
 		    Controls: <br>
-		    '4' = rotate left <br>
-		    '6' = rotate right <br>
-		    '8' = accelerate <br>
-		    '5' = "hyperspace"
+		    '4' = Rotate Left <br>
+		    '6' = Rotate Right <br>
+		    '8' = Accelerate <br>
+		    '2' = Hyperspace
 	    </footer>
 	</body>
 </html>
