fixed Bullet class, added fire button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 		    '4' = Rotate Left <br>
 		    '6' = Rotate Right <br>
 		    '8' = Accelerate <br>
-		    '2' = Hyperspace
+		    '2' = Hyperspace <br>
+		    '5' = Fire a Bullet
 	    </footer>
 	</body>
 </html>
